# SPL-Assignment3-Client

./: CMakeLists.txt  makefile
include/: BGRSClient.h  readFromKB.h  readFromSock.h
src/: BGRSClient.cpp  Client.cpp  connectionHandler.cpp  readFromKB.cpp  readFromSock.cpp
